src/tests/Metalama.Patterns.Caching.AspectTests/InvalidateCacheAttributeTests/Diagnostics/MethodWithNotMatchingParameterName.t.cs
// Error LAMA5102 on `Invalidate`: `The [InvalidateCache] aspect applied to MethodWithNotMatchingParameterName.CachingClass.DoAction(int) cannot invalidate MethodWithNotMatchingParameterName.CachingClass.DoAction(int): the invalidating method does not contain a parameter named 'notMatchingParameter'. Make sure MethodWithNotMatchingParameterName.CachingClass.DoAction(int) contains a parameter named 'notMatchingParameter' or add the [NotCachedKey] attribute to the 'notMatchingParameter' parameter in MethodWithNotMatchingParameterName.CachingClass.DoAction(int).`